# email-checker-mcp

./: README.md  pyproject.toml
src/email_checker/: __init__.py  email_validator.py  server.py  tools.py
