[project]
name = "email-checker-mcp"
version = "0.1.0"
description = "Email validation MCP tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[[project.authors]]
name = "Ravina Patel"
email = "ravinapatel738@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
email-checker-mcp = "email_checker.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/email_checker"]
